[gd_scene load_steps=6 format=3 uid="uid://c2ldy1rh5cde7"]

[ext_resource type="Theme" uid="uid://d3jium3bs8gi" path="res://assets/theme/theme_mage.tres" id="1_esqvs"]
[ext_resource type="Texture2D" uid="uid://21nu410060r4" path="res://assets/ui/parchment_ui_vert1.png" id="2_nv6ym"]
[ext_resource type="Texture2D" uid="uid://2dw3rl446xuq" path="res://assets/ui/parchment_ui_vert2.png" id="3_ppu1n"]
[ext_resource type="Theme" uid="uid://0sn2vinpcent" path="res://themes/pannel/base_card.tres" id="4_esqvs"]
[ext_resource type="Script" uid="uid://q1ps1b4kgdtw" path="res://scenes/ui/relics/components/relic_selection.gd" id="4_ppu1n"]

[node name="RelicSelection" type="TextureButton"]
custom_minimum_size = Vector2(287, 308)
offset_right = 287.0
offset_bottom = 308.0
theme = ExtResource("1_esqvs")
texture_normal = ExtResource("2_nv6ym")
texture_hover = ExtResource("3_ppu1n")
texture_focused = ExtResource("3_ppu1n")
stretch_mode = 0
script = ExtResource("4_ppu1n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_esqvs")
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 25
text = "artecfact name"

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 15
text = "Un sort qui bah enfaite il est bien mais du coup blou blou blou"
fit_content = true

[node name="ModifiersContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Rarity" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "rare"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Control" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "max stack"

[node name="MaxStackObtained" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "0"

[node name="Separator" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "/"

[node name="MaxStackLimit" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "5"

[connection signal="pressed" from="." to="." method="_on_pressed"]
